cabal-version:      2.4
name:               aoc
version:            0.1.0.0

author:             Ambuj Singh
maintainer:         97109381+that-ambuj@users.noreply.github.com

extra-source-files: CHANGELOG.md

executable haskell-toml
    main-is:          Main.hs

    other-modules:    Day1, Day2

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
        , parsec ^>= 3.1.13.0
    hs-source-dirs:   .
    default-language: Haskell2010
