cabal-version:      2.4
name:               aoc
version:            0.1.0.0

author:             Ambuj Singh
maintainer:         97109381+that-ambuj@users.noreply.github.com

extra-source-files: CHANGELOG.md

executable haskell-toml
    main-is:          Main.hs

    other-modules:    Day1, Day2, Day3, Day4

    build-depends:    base ^>=4.15.1.0
                , parsec ^>= 3.1.13.0
                , split ^>= 0.2.4
    hs-source-dirs:   .
    default-language: Haskell2010
